--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "firebase": "^5.5.9",
+    "ng-sidebar": "^8.0.0",
+    "ngx-bootstrap": "^3.1.2",
+    "ngx-spinner": "^6.1.2",
     "rxjs": "~6.3.3",
+    "rxjs-compat": "^6.3.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
