--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "firebase": "^5.5.9",
     "ng-sidebar": "^8.0.0",
     "ngx-bootstrap": "^3.1.2",
+    "ngx-flip": "^6.1.1",
     "ngx-spinner": "^6.1.2",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.3.3",
